<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:padding="16dp"
    tools:context="com.example.mego.adas.auth.VerifyPhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/please_enter_code_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/please_enter_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/please_enter_textSize" />

        <TextView
            android:id="@+id/on_your_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/on_your_phone"
            android:textColor="@android:color/white"
            android:textSize="@dimen/please_enter_textSize" />

        <TextView
            android:id="@+id/current_phone_number_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/please_enter_textSize"
            tools:text="+2001017517563" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/pin_code_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="50dp"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/please_enter_textSize"
            app:pinLineColors="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/continue_verifying_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_auth_main"
            android:text="@string/continue_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/editText_auth_main" />

        <LinearLayout
            android:id="@+id/resend_code_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_not_get_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/resend_code_textSize" />

            <TextView
                android:id="@+id/resend_code_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/resend_code_textSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_your_phone_number"
                android:textColor="@android:color/white"
                android:textSize="@dimen/resend_code_textSize" />

            <TextView
                android:id="@+id/change_phone_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/change_number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/resend_code_textSize" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
