<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/fragm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.mego.adas.user_info.EditUserInfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/upload_progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/upload_progress_text_size"
                    android:visibility="invisible"
                    tools:text="10%" />

                <ProgressBar
                    android:id="@+id/loading_image_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="@dimen/upload_progress_bar_size"
                    android:layout_height="@dimen/upload_progress_bar_size"
                    android:layout_centerInParent="true"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/download_progress_bar"
                    android:visibility="invisible" />


            </RelativeLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_user_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/accessibility_user_image"
                android:src="@drawable/app_logo" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/edit_name_container"
            style="@style/EditItemStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/edit_item_label_textSize" />

            <TextView
                android:id="@+id/edit_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_item_text_textSize"
                tools:text="Ahmed Abd-Elmeged" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_email_container"
            style="@style/EditItemStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/edit_user_email_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/edit_item_label_textSize" />

            <TextView
                android:id="@+id/edit_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_item_text_textSize"
                tools:text="ahmed.abdelmeged.vm@gmail.com" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_phone_container"
            style="@style/EditItemStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/edit_item_label_textSize" />

            <TextView
                android:id="@+id/edit_user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_item_text_textSize"
                tools:text="+2001017517563" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_location_container"
            style="@style/EditItemStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/edit_item_label_textSize" />

            <TextView
                android:id="@+id/edit_user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_item_text_textSize"
                tools:text="Mansoura" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_password_container"
            style="@style/EditItemStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/edit_item_label_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:password="true"
                android:text="@string/password_place_holder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/edit_item_text_textSize" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>